--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: .NET Core
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -13,15 +13,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-    - name: Restore Tool
-      run: dotnet tool restore
-    - name: Check C# code format 
-      run: dotnet format --check
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.100
-    - name: Restore
-      run: dotnet restore
-    - name: Build
-      run: dotnet build
+    - name: .NET Core Build
+      run: ./tools/sh/dotnet_build.sh
+    - name: C# code analyze
+      run: ./tools/sh/analyze.sh
+    - name: C# code format 
+      run: dotnet format --check
