--- a/Client.csproj
+++ b/Client.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <CodeAnalysisRuleSet>.\tools\sh\global.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
