--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Setup Checkout
+      uses: actions/checkout@v2
       with:
         submodules: true
     - name: Setup .NET Core
@@ -19,7 +20,7 @@ jobs:
         dotnet-version: 3.1.100
     - name: .NET Core Build
       run: ./tools/sh/dotnet_build.sh
-    - name: C# code analyze
+    - name: C# Code Analyze
       run: ./tools/sh/analyze.sh
-    - name: C# code format 
+    - name: C# Code Format 
       run: dotnet format --check
