--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,6 @@ jobs:
     - name: .NET Core Build
       run: ./tools/sh/dotnet_build.sh
     - name: C# Code Analyze
-      run: ./tools/sh/analyze.sh
+      run: ./tools/sh/analyze.sh --severity-level=hidden
     - name: C# Code Format 
       run: dotnet format --check
